--- a/aiken.toml
+++ b/aiken.toml
@@ -14,6 +14,11 @@ version = "1.7.0"
 source = "github"
 
 [[dependencies]]
+name = "aiken-lang/fuzz"
+version = "edcfa9d8628133279c16b2b1a9eccbd3c011355d"
+source = "github"
+
+[[dependencies]]
 name = "aiken-lang/fortuna"
 version = "d2e5831f92b1b596bb2cc1ab801509da28650fcc"
 source = "github"
