--- a/aiken.toml
+++ b/aiken.toml
@@ -1,5 +1,7 @@
 name = "anastasia-labs/aiken-design-patterns"
-version = "0.0.1"
+version = "0.0.2"
+compiler = "v1.1.1"
+plutus = "v3"
 license = "Apache-2.0"
 description = "Implementations of common design patterns for Cardano smart contracts"
 
@@ -10,15 +12,10 @@ platform = "github"
 
 [[dependencies]]
 name = "aiken-lang/stdlib"
-version = "1.7.0"
+version = "2.0.0"
 source = "github"
 
 [[dependencies]]
 name = "aiken-lang/fuzz"
-version = "edcfa9d8628133279c16b2b1a9eccbd3c011355d"
-source = "github"
-
-[[dependencies]]
-name = "aiken-lang/fortuna"
-version = "d2e5831f92b1b596bb2cc1ab801509da28650fcc"
+version = "2.0.0"
 source = "github"
