fix: update fortuna source

--- a/aiken.toml
+++ b/aiken.toml
@@ -19,6 +19,6 @@ version = "edcfa9d8628133279c16b2b1a9eccbd3c011355d"
 source = "github"
 
 [[dependencies]]
-name = "aiken-lang/fortuna"
-version = "d2e5831f92b1b596bb2cc1ab801509da28650fcc"
+name = "cardano-miners/fortuna"
+version = "5eeb1bc31b72252b991bbcaf836b128dca6a74b9"
 source = "github"
