feat: add CI checks for aiken.lock and plutus.json

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,6 +30,8 @@ jobs:
       - run: aiken check -D
       - run: aiken build
       - run: aiken docs -o docs
+      - run: git diff --name-only --exit-code aiken.lock
+      - run: git diff --name-only --exit-code plutus.json
       - uses: actions/upload-pages-artifact@v2
         with:
           path: "docs/"
