--- a/.gitignore
+++ b/.gitignore
@@ -4,5 +4,5 @@ artifacts/
 build/
 # Aiken's default documentation export
 docs/
-# .lock file
-aiken.lock
+# No need to track plutus.json as validators are just examples
+plutus.json
