feat: fix and update param validation
* Update the parameter application format to reflect latest `uplc` crate
  (no postfix is needed anymore by the user, since all 3 variants end up
  with an identical one)
* Rename `apply-params` to `parameter-validation` for consistency with
  source repo (`design-patterns`)
* Remove Scott encoded utility functions along with its tests, and import
  them from an external repo
* Move all the example validators into an `examples` subdirectory and
  simplify their filenames
* Refine `README.md` (TODO: add docs for linked list)

--- a/aiken.toml
+++ b/aiken.toml
@@ -1,5 +1,6 @@
 name = "anastasia-labs/aiken-design-patterns"
 version = "1.0.0"
+compiler = "v1.1.9"
 plutus = "v3"
 license = "Apache-2.0"
 description = "Implementations of common design patterns for Cardano smart contracts"
@@ -18,3 +19,10 @@ source = "github"
 name = "aiken-lang/fuzz"
 version = "2.1.0"
 source = "github"
+
+[[dependencies]]
+name = "keyan-m/aiken-scott-utils"
+version = "v1.0.0"
+source = "github"
+
+[config]
