--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,9 +25,9 @@ jobs:
       - uses: actions/checkout@v3
       - uses: aiken-lang/setup-aiken@v1.0.2
         with:
-          version: v1.1.7
+          version: v1.1.9
       - run: aiken fmt --check
-      - run: aiken check -D
+      - run: aiken check -D --max-success=20
       - run: aiken build
       - run: aiken docs -o docs
       - run: git diff --name-only --exit-code aiken.lock
