--- a/aiken.toml
+++ b/aiken.toml
@@ -1,5 +1,6 @@
 name = "anastasia-labs/aiken-design-patterns"
 version = "1.3.0"
+compiler = "v1.1.19"
 plutus = "v3"
 license = "Apache-2.0"
 description = "Implementations of common design patterns for Cardano smart contracts"
