--- a/aiken.toml
+++ b/aiken.toml
@@ -1,5 +1,5 @@
 name = "anastasia-labs/aiken-design-patterns"
-version = "1.3.0"
+version = "main"
 compiler = "v1.1.19"
 plutus = "v3"
 license = "Apache-2.0"
@@ -12,12 +12,12 @@ platform = "github"
 
 [[dependencies]]
 name = "aiken-lang/stdlib"
-version = "3.0.0"
+version = "v3.0.0"
 source = "github"
 
 [[dependencies]]
 name = "aiken-lang/fuzz"
-version = "2.2.0"
+version = "v2.2.0"
 source = "github"
 
 [[dependencies]]
